--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,5 @@
     <string name="sign_up">Sign Up</string>
     <string name="log_in">Log In</string>
     <string name="go_back">Go Back</string>
-    <string name="note_contents" />
+    <string name="note_contents">Type your note here</string>
 </resources>
