--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">My Application</string>
     <string name="sign_up">Sign Up</string>
     <string name="log_in">Log In</string>
+    <string name="welcome_message">WELCOME!</string>
+    <string name="note_button">Notes</string>
+    <string name="list_button">To-do list</string>
+    <string name="flashcard_button">Flashcards</string>
 </resources>
