--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,14 @@
     <string name="note_button">Notes</string>
     <string name="list_button">To-do list</string>
     <string name="flashcard_button">Flashcards</string>
+    <string name="settings">Settings</string>
+    <string name="password">password</string>
+    <string name="username">username</string>
+    <string name="save">save</string>
+    <string name="update">update</string>
+    <string name="logout">logout</string>
+    <string name="confirm_password">confirm password</string>
+    <string name="new_password">new password</string>
+    <string name="new_username">new username</string>
+    <string name="toggle_password_visibility">Toggle Password Visibility</string>
 </resources>
