--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="task_priority">Priority</string>
     <string name="delete">Delete</string>
     <string name="edit">Edit</string>
+    <string name="pomodoro_timer">Pomodoro Timer</string>
 </resources>
